fixed text to not display on mobile

--- a/STYLE/game.scss
+++ b/STYLE/game.scss
@@ -173,7 +173,8 @@ Article that might be helpful: https://css-tricks.com/aspect-ratio-boxes/
         margin-left: 3%;
         
         .sq {
-            font-size: 40px;
+            // Hide the text
+            //font-size: 40px;
         }
 
         #message {
@@ -191,7 +192,8 @@ Article that might be helpful: https://css-tricks.com/aspect-ratio-boxes/
         margin-left: 0px;
         
         .sq {
-            font-size: 40px;
+            // Hide the text
+            //font-size: 40px;
         }
   }
 }
